--- a/source/unix/mapeditor/Makefile.in
+++ b/source/unix/mapeditor/Makefile.in
@@ -80,10 +80,10 @@ CXXFLAGS = @CXXFLAGS@ -Dkarteneditor -I./ -DFREEMAPZOOM -DNEWKEYB
 
 bin_PROGRAMS = asc_mapedit asc_map2pcx
 
-asc_mapedit_SOURCES = edevents.cpp edgen.cpp edglobal.cpp edmain.cpp edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp
+asc_mapedit_SOURCES = edevents.cpp edgen.cpp edglobal.cpp edmain.cpp edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp
 asc_mapedit_LDADD = ../../sdl/libsdl.a ../../libs/triangul/libtriangul.a -lSDL -lpthread @LDADDLIBBZ2@
 
-asc_map2pcx_SOURCES = map2pcx.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp
+asc_map2pcx_SOURCES = map2pcx.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp
 asc_map2pcx_LDADD = ../../sdl/libsdl.a ../../libs/triangul/libtriangul.a -lSDL -lpthread -lSDL_image @LDADDLIBBZ2@
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../../config.h
@@ -103,7 +103,7 @@ PropertyGroup.o gameoptions.o Named.o buildingtype.o vehicletype.o \
 containerbase.o mapalgorithms.o viewcalculation.o gamemap.o password.o \
 password_dialog.o research.o mapdisplay.o ascstring.o graphicset.o \
 vehicle.o buildings.o networkdata.o resourcenet.o textfileparser.o \
-terraintype.o objecttype.o textfiletags.o
+terraintype.o objecttype.o textfiletags.o itemrepository.o
 asc_mapedit_DEPENDENCIES =  ../../sdl/libsdl.a \
 ../../libs/triangul/libtriangul.a
 asc_mapedit_LDFLAGS = 
@@ -115,7 +115,7 @@ vehicletype.o containerbase.o mapalgorithms.o viewcalculation.o \
 gamemap.o password.o password_dialog.o research.o mapdisplay.o \
 ascstring.o graphicset.o vehicle.o buildings.o networkdata.o \
 resourcenet.o textfileparser.o terraintype.o objecttype.o \
-textfiletags.o
+textfiletags.o itemrepository.o
 asc_map2pcx_DEPENDENCIES =  ../../sdl/libsdl.a \
 ../../libs/triangul/libtriangul.a
 asc_map2pcx_LDFLAGS = 
@@ -135,8 +135,8 @@ DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/containerbase.P .deps/dialog.P .deps/dlg_box.P .deps/edevents.P \
 .deps/edgen.P .deps/edglobal.P .deps/edmain.P .deps/edmisc.P \
 .deps/edselfnt.P .deps/gamemap.P .deps/gameoptions.P .deps/graphicset.P \
-.deps/loadbi3.P .deps/loaders.P .deps/loadpcxc.P .deps/map2pcx.P \
-.deps/mapalgorithms.P .deps/mapdisplay.P .deps/misc.P \
+.deps/itemrepository.P .deps/loadbi3.P .deps/loaders.P .deps/loadpcxc.P \
+.deps/map2pcx.P .deps/mapalgorithms.P .deps/mapdisplay.P .deps/misc.P \
 .deps/networkdata.P .deps/newfont.P .deps/objecttype.P .deps/palette.P \
 .deps/password.P .deps/password_dialog.P .deps/pd.P .deps/research.P \
 .deps/resourcenet.P .deps/sgstream.P .deps/spfst.P .deps/stack.P \
